<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2019 Wai Yan - (09 97777 3 444).
  ~ All rights reserved.
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_central_bank_exchange"
            android:icon="@drawable/ic_menu_exchange_rate"
            android:iconTint="@android:color/transparent"
            android:title="@string/nav_item__central_bank_exchange_rate"
            tools:targetApi="o" />
        <item
            android:id="@+id/nav_other_banks_exchange"
            android:icon="@drawable/ic_menu_exchange_rate"
            android:iconTint="@android:color/transparent"
            android:title="@string/nav_item__other_banks_exchange_rate"
            tools:targetApi="o" />
    </group>

    <item android:title="@string/nav_item_title__more">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:iconTint="@android:color/transparent"
                android:title="@string/nav_item__settings"
                tools:targetApi="o" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_about"
                android:iconTint="@android:color/transparent"
                android:title="@string/nav_item__about"
                tools:targetApi="o" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:iconTint="@android:color/transparent"
                android:title="@string/nav_item__share"
                tools:targetApi="o" />
        </menu>
    </item>
</menu>
