<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_xFFFFFF">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rlMainLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <RelativeLayout
                android:id="@+id/rlHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_100"
                android:paddingTop="@dimen/small_v_margin"
                android:paddingBottom="@dimen/small_v_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/HeaderLightTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:gravity="start"
                    android:text="@string/last_updated" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblUpdatedDate"
                    style="@style/HeaderLightTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"
                    android:text="@string/placeholder" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlHeader"
                android:layout_alignParentEnd="true"
                android:background="@color/grey_100"
                android:layout_marginTop="1dp"
                android:paddingTop="@dimen/small_v_margin"
                android:paddingBottom="@dimen/small_v_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblCurrency"
                    style="@style/HintLabelStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/currency"
                    tools:ignore="RelativeOverlap" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/HintLabelStyle"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/lblSell"
                    android:gravity="end"
                    android:text="@string/buy"
                    tools:ignore="RelativeOverlap" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/lblSell"
                    style="@style/HintLabelStyle"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/margin_between_buy_and_sell"
                    android:gravity="end"
                    android:text="@string/sell" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvExchange"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/rlLabel"
                android:clipToPadding="false"
                android:scrollbars="none" />

        </RelativeLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</RelativeLayout>